--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
      </main>
      </p><h1 class="promocion">Promocion de productos</h1>
-  
+     <section class="inicio"></section>
      <div class="producto">
      
         <img src="https://res.cloudinary.com/dsmisjg3a/image/upload/v1722962590/81rx6UqMxkL._AC_SX425__ztbmje.jpg" alt="billetera de calvin klein" >
@@ -28,6 +28,7 @@
             Esta billetera delgada es perfecta para el uso diario y cabe fácilmente en cualquier bolsillo.</p>
      
     </div>
+</section>1
 
    <section class="container-product">
        <div class="card">
