agregando mas paginas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="menu">
             <a href="" class="opciones">Inicio</a>
             <a href="" class="opciones">Productos</a>
-            <a href="" class="opciones">Sobre nosotros</a>
+            <a href="sob" class="opciones">Sobre nosotros</a>
             
             <img src="./img/iconwhatssap.svg" alt="" class="nav-icon">
             
