agrego video a sobre nosotros

--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -20,12 +20,16 @@
         </nav>
 
         <h2 class="decoracion-text">Quienes somos</h2>
+        
         <div class="decoracion-text">
         <p>El retail más importante y relevante en Centroamérica, fundada el 8 de diciembre de 1921 en San Salvador por José J. Simán. <br>
    
            Nuestros 99 años han forjado una compañía líder,<br>
             operando en las principales ciudades de El Salvador, San José, Costa Rica; Managua, Nicaragua y Ciudad de Guatemala, Guatemala.</p>
        </div>
+       <div class="video-container">
+        <iframe width="560" height="315" src="https://res.cloudinary.com/dsmisjg3a/video/upload/v1722978887/Y2meta.app_-_100_a%C3%B1os_al_cien_-_Almacenes_Siman.-_240p_falfyf.mp4" ></iframe>
+      </div>
        <section class="logo">
        <img src="./img/siman.png" alt="">
       
